--- a/WebApplication2/wwwroot/css/site.css
+++ b/WebApplication2/wwwroot/css/site.css
@@ -14,5 +14,15 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: aqua;
 }
+
+.myfooter{
+    background-color: black;
+}
+
+.nanbar_temp {
+    background-color: black;
+}
+
