--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
     <div class="myfooter">
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - WebApplication2 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                &copy; 2024 -  Translator App - <a asp-area="" asp-controller="Home" asp-action="App_Details">App Details</a>
         </div>
     </footer>
     </div>
